feat: Integrate Shopier payment gateway
Adds Shopier integration for handling payment processing and callbacks.
Includes API key configuration, signature verification, and user credit updates upon successful payments.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maç Tahmin Yapay Zekası</title>
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
@@ -18,7 +18,8 @@
     "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
     "@netlify/functions": "https://aistudiocdn.com/@netlify/functions@^5.1.0",
     "firebase-admin": "https://aistudiocdn.com/firebase-admin@^13.6.0",
-    "firebase-admin/": "https://aistudiocdn.com/firebase-admin@^13.6.0/"
+    "firebase-admin/": "https://aistudiocdn.com/firebase-admin@^13.6.0/",
+    "crypto": "https://aistudiocdn.com/crypto@^1.0.1"
   }
 }
 </script>
