feat: Load Firebase service account from file
This commit changes how the Firebase Admin SDK is initialized in Netlify functions. Instead of reading the service account key from a base64 encoded environment variable, it now reads it from a `firebase-service-account.json` file. This improves security and manageability by avoiding large, sensitive environment variables.

It also updates the `databaseURL` to use the non-VITE prefixed environment variable for server-side functions.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     "@netlify/functions": "https://aistudiocdn.com/@netlify/functions@^5.1.0",
     "firebase-admin": "https://aistudiocdn.com/firebase-admin@^13.6.0",
     "crypto": "https://aistudiocdn.com/crypto@^1.0.1",
-    "firebase-admin/": "https://aistudiocdn.com/firebase-admin@^13.6.0/"
+    "firebase-admin/": "https://aistudiocdn.com/firebase-admin@^13.6.0/",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security"
   }
 }
 </script>
